--- a/.github/workflows/square-equation.yml
+++ b/.github/workflows/square-equation.yml
@@ -24,3 +24,7 @@ jobs:
 
       - name: Test
         run: ./SquareEquationTest ./SquareEquationLib/bin/Debug/net7.0/SquareEquationLib.dll
+
+      - name: XUnit test
+        run: dotnet test /p:CollectCoverage=true
+      
