--- a/.github/workflows/square-equation.yml
+++ b/.github/workflows/square-equation.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Test
         run: ./SquareEquationTest ./SquareEquationLib/bin/Debug/net7.0/SquareEquationLib.dll
 
-      - name: XUnit test
+      - name: XUnit MSBuild test
         run: cd XUnit.Coverlet.MSBuild/ && dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura
+
+      - name: XUnit Collector test
+        run: cd XUnit.Coverlet.Collector && dotnet test --collect:"XPlat Code Coverage"
       
